# mygit

./: CMakeLists.txt
src/: init.cpp  main.cpp
src/definitions/: hash-file.cpp  init.cpp
src/headers/: hash-file.hpp  init.hpp
